using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace MarketManagement.Model
{
    public enum ProductCategory
    {
        Food,
        Drink,
        Appliance,
        Clothes,
        Other
    }
}
